Added icons to quotes section and fixed spelling mistakes

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 									<strong>A Chennaite</strong>  who
 									get excited for every "Hello World" written in new programming language. 
 									I always believe learning should be <strong>Funtastic</strong> and coding should be <strong>Entertaining.</strong>
-									I love web technologies and I am very absessed with <strong>Javascript</strong>
+									I love web technologies and very absessed towards <strong>Javascript</strong>
 								</p>
 							</div>
 						</div>
@@ -128,7 +128,7 @@
 								<p class="mb-0">
 									Web development is always my favorite play ground.
 									Creating a valuable product is wonderful feel.
-									I believe learning advanced Javascript is more important learning new frameworks.
+									I believe learning advanced Javascript is more important than learning new frameworks.
 								</p>
 							</div>
 						</div>
@@ -338,21 +338,6 @@
 														<i class="fas fa-star-half-alt"></i>
 													</span>
 												</p>
-												<!--<strong>Telugu</strong>
-												<p class="mb-2 text-warning">
-													<span class="p-1">
-														<i class="fas fa-star"></i>
-													</span>
-													<span class="p-1">
-														<i class="fas fa-star"></i>
-													</span>
-													<span class="p-1">
-														<i class="fas fa-star"></i>
-													</span>
-													<span class="p-1">
-														<i class="fas fa-star-half-alt"></i>
-													</span>
-												</p>-->
 											</div>
 											<div class="col-md-6">
 												<strong>Tamil</strong>
@@ -404,7 +389,7 @@
 													<strong>Project : </strong><span>CoderTest</span> 
 												</div>
 												<p>
-													Place where I had started learning alphbets of IT industry. I was working on the project "CoderTest" 
+													Place where I had started learning alphabets of IT industry. I was working on the project "CoderTest" 
 													which is online assessment application for recruiting experienced professionals. I was working on <strong>ASP.NET MVC</strong>  and <strong>SQL Server 2012</strong>.
 													Along side I was working on responsiveness of the application using media queries and bootstrap.
 													<strong>Javascript</strong> and <strong>jQuery</strong> are the other ingredients I have added to the project.
@@ -571,13 +556,13 @@
 					</div>
 					<div class="row">
 						<div class="col-md-6 animate-box" data-animate-effect="fadeInLeft">
-							<span class="heading-meta">Malcomm X</span>
+							<span class="heading-meta">Malcolm X</span>
 							<div class="services color-1">
 								<p>
-									Without education, you’re not going anywhere in this world
+									<span class="text-primary p-1"><i class="fas fa-book-reader"></i></span> Without education, you’re not going anywhere in this world
 								</p>
 								<p>
-									Nobody can give you freedom. Nobody can give you equality or justice. If you're a man, you take it.
+									<span class="text-info p-1"><i class="fas fa-peace"></i></span> Nobody can give you freedom. Nobody can give you equality or justice. If you're a man, you take it.
 								</p>
 							</div>
 						</div>
@@ -585,10 +570,10 @@
 							<span class="heading-meta">Martin Luther King Jr</span>
 							<div class="services color-4">
 								<p>
-									Life's most persistent and urgent question is, 'What are you doing for others?
+									<span class="text-success p-1"><i class="fas fa-thumbs-up"></i></span> Life's most persistent and urgent question is, 'What are you doing for others?
 								</p>
 								<p>
-									Darkness cannot drive out darkness; only light can do that. Hate cannot drive out hate; only love can do that.
+									<span class="text-warning"><i class="fas fa-fire"></i></span> Darkness cannot drive out darkness; only light can do that. Hate cannot drive out hate; only love can do that.
 								</p>
 							</div>
 						</div>
