Fixed spelling mistakes

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 									<strong>A Chennaite</strong>  who
 									get excited for every "Hello World" written in new programming language. 
 									I always believe learning should be <strong>Funtastic</strong> and coding should be <strong>Entertaining.</strong>
-									I love web technologies and very absessed towards <strong>Javascript</strong>
+									I love web technologies and very obsessed towards <strong>Javascript</strong>
 								</p>
 							</div>
 						</div>
