Removed unused css classes

--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
 				</div>
 			</section>
 
-			<section class="section" data-section="awards">
+			<section class="awards" data-section="awards">
 				<div class="container-fluid">
 					<div class="row">
 						<div class="col-md-6 col-md-offset-3 col-md-pull-3 animate-box" data-animate-effect="fadeInLeft">
@@ -505,7 +505,7 @@
 				</div>
 			</section>
 
-			<section class="education" data-section="hobbies">
+			<section class="hobbies" data-section="hobbies">
 				<div class="container-fluid">
 					<div class="row">
 						<div class="col-md-12">
@@ -546,7 +546,7 @@
 				</div>
 			</section>
 
-			<section class="education" data-section="quotes">
+			<section class="quotes" data-section="quotes">
 				<div class="container-fluid">
 					<div class="row">
 						<div class="col-md-12">
