Added strong tag to skills section

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 									<span class="heading-meta">Technical Skills</span>
 									<div class="services color-1">
 										<div class="mb-4" id="#web">
-											<h3 class="mb-3">Client Side</h3>
+											<h3 class="mb-3"><strong>Client Side</strong></h3>
 											<span title="HTML5" class="p-1"><i class="devicon-html5-plain colored fa-2x"></i></span>
 											<span title="CSS3"  class="p-1"><i class="devicon-css3-plain colored fa-2x"></i></span>
 											<span title="Javascript"  class="p-1"><i class="devicon-javascript-plain colored fa-2x"></i></span>
@@ -220,7 +220,7 @@
 										<div class="row">
 											<div class="col-md-6">
 												<div class="mb-4" id="#server-side">
-													<h3 class="mb-3">Server Side</h3>
+													<h3 class="mb-3"><strong>Server Side</strong></h3>
 													<span title="Dot net" class="p-1"><i class="devicon-dot-net-plain-wordmark colored fa-2x"></i></span>
 													<span title="C#" class="p-1"><i class="devicon-csharp-plain colored fa-2x"></i></span>
 													<span title="Node JS" class="p-1"><i class="devicon-nodejs-plain colored fa-2x"></i></span>
@@ -230,7 +230,7 @@
 											
 											<div class="col-md-6">
 												<div class="mb-4" id="#backend">
-													<h3 class="mb-3">Backend</h3>
+													<h3 class="mb-3"><strong>Backend</strong></h3>
 													<span title="MySql" class="p-1"><i class="devicon-mysql-plain colored fa-2x"></i></span>
 													<span title="MongoDB" class="p-1"><i class="devicon-mongodb-plain colored fa-2x"></i></span>
 												</div>
@@ -240,16 +240,17 @@
 										<div class="row">
 											<div class="col-md-6">
 												<div id="#cloud-services">
-													<h3 class="mb-3">Cloud Services</h3>
+													<h3 class="mb-3"><strong>Cloud Services</strong></h3>
 													<span title="AWS" class="p-1"><i class="devicon-amazonwebservices-original colored fa-3x"></i></span>
 												</div>
 											</div>
 											<div class="col-md-6">
 												<div id="#tools">
-													<h3 class="mb-3">Tools</h3>
+													<h3 class="mb-3"><strong>Tools</strong></h3>
 													<span title="Visual Studio" class="p-1"><i class="devicon-visualstudio-plain colored fa-2x"></i></span>
 													<span title="Git" class="p-1"><i class="devicon-git-plain colored fa-2x"></i></span>
 													<span title="Source Tree" class="p-1"><i class="devicon-sourcetree-plain colored fa-2x"></i></span>
+													<span title="Webpack" class="p-1"><i class="devicon-webpack-plain colored fa-2x"></i></span>
 												</div>
 											</div>
 										</div>
@@ -258,7 +259,7 @@
 								<div class="col-md-6 animate-box"  data-animate-effect="fadeInRight">
 									<span class="heading-meta">Professional Skills</span>
 									<div class="services color-2">
-										<h3 class="mb-3 text-primary">Soft Skills</h3>
+										<h3 class="mb-3"><strong>Soft Skills</strong></h3>
 										<div class="row">
 											<div class="col-md-6">
 												<strong>Communication</strong>
@@ -320,7 +321,7 @@
 											</div>
 										</div>
 										
-										<h3 class="mb-3">Languagues Known</h3>
+										<h3 class="mb-3"><strong>Languagues Known</strong></h3>
 										<div class="row">
 											<div class="col-md-6">
 												<strong>English</strong>
