Replaced mysql with sql server icon and updated soft skills

--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 											<div class="col-md-6">
 												<div class="mb-4" id="#server-side">
 													<h3 class="mb-3"><strong>Server Side</strong></h3>
-													<span title="Dot net" class="p-1"><i class="devicon-dot-net-plain-wordmark colored fa-2x"></i></span>
+													<span title="Dot net" class="p-1"><i class="devicon-dotnetcore-plain colored fa-2x"></i></span>
 													<span title="C#" class="p-1"><i class="devicon-csharp-plain colored fa-2x"></i></span>
 													<span title="Node JS" class="p-1"><i class="devicon-nodejs-plain colored fa-2x"></i></span>
 													<span title="Express JS" class="p-1"><i class="devicon-express-original colored fa-2x"></i></span>
@@ -230,8 +230,8 @@
 											
 											<div class="col-md-6">
 												<div class="mb-4" id="#backend">
-													<h3 class="mb-3"><strong>Backend</strong></h3>
-													<span title="MySql" class="p-1"><i class="devicon-mysql-plain colored fa-2x"></i></span>
+													<h3 class="mb-3"><strong>Database</strong></h3>
+													<span title="SQL Server" class="p-1"><i class="devicon-microsoftsqlserver-plain colored fa-2x"></i></span>
 													<span title="MongoDB" class="p-1"><i class="devicon-mongodb-plain colored fa-2x"></i></span>
 												</div>
 											</div>
@@ -242,6 +242,7 @@
 												<div id="#cloud-services">
 													<h3 class="mb-3"><strong>Cloud Services</strong></h3>
 													<span title="AWS" class="p-1"><i class="devicon-amazonwebservices-original colored fa-3x"></i></span>
+													<span title="Heroku" class="p-1"><i class="devicon-heroku-plain-wordmark colored fa-3x"></i></span>
 												</div>
 											</div>
 											<div class="col-md-6">
@@ -261,100 +262,87 @@
 									<div class="services color-2">
 										<h3 class="mb-3"><strong>Soft Skills</strong></h3>
 										<div class="row">
-											<div class="col-md-6">
-												<strong>Communication</strong>
+											<div class="col-md-4">
+												<strong>Adatability</strong>
 												<p class="text-success">
-													<span class="p-1">
-														<i class="fas fa-star"></i>
-													</span>
-													<span class="p-1">
-														<i class="fas fa-star"></i>
-													</span>
-													<span class="p-1">
-														<i class="fas fa-star"></i>
-													</span>
-													<span class="p-1">
-														<i class="fas fa-star-half-alt"></i>
-													</span>
-												</p>
-												<strong>Teamwork</strong>
-												<p class="text-success">
-													<span class="p-1">
-														<i class="fas fa-star"></i>
-													</span>
-													<span class="p-1">
-														<i class="fas fa-star"></i>
-													</span>
-													<span class="p-1">
-														<i class="fas fa-star"></i>
-													</span>
-													<span class="p-1">
-														<i class="fas fa-star"></i>
-													</span>
+													<span><i class="fas fa-star"></i></span>
+													<span><i class="fas fa-star"></i></span>
+													<span><i class="fas fa-star"></i></span>
+													<span><i class="fas fa-star-half-alt"></i></span>
 												</p>
 											</div>
-											<div class="col-md-6">
-												<strong>Leadership</strong>
+											<div class="col-md-4">
+												<strong>Communication</strong>
 												<p class="text-success">
-													<span class="p-1">
-														<i class="fas fa-star"></i>
-													</span>
-													<span class="p-1">
-														<i class="fas fa-star"></i>
-													</span>
-													<span class="p-1">
-														<i class="fas fa-star"></i>
-													</span>
+													<span><i class="fas fa-star"></i></span>
+													<span><i class="fas fa-star"></i></span>
+													<span><i class="fas fa-star"></i></span>
+													<span><i class="fas fa-star-half-alt"></i></span>
 												</p>
+											</div>
+											<div class="col-md-4">
 												<strong>Creativity</strong>
 												<p class="text-success">
-													<span class="p-1">
-														<i class="fas fa-star"></i>
-													</span>
-													<span class="p-1">
-														<i class="fas fa-star"></i>
-													</span>
-													<span class="p-1">
-														<i class="fas fa-star"></i>
-													</span>
+													<span><i class="fas fa-star"></i></span>
+													<span><i class="fas fa-star"></i></span>
+													<span><i class="fas fa-star"></i></span>
+												</p>
+											</div>
+										</div>
+										<div class="row">
+											<div class="col-md-4">
+												<strong>Leadership</strong>
+												<p class="text-success">
+													<span><i class="fas fa-star"></i></span>
+													<span><i class="fas fa-star"></i></span>
+													<span><i class="fas fa-star"></i></span>
+												</p>
+											</div>
+											<div class="col-md-4">
+												<strong>Perseverance</strong>
+												<p class="text-success">
+													<span><i class="fas fa-star"></i></span>
+													<span><i class="fas fa-star"></i></span>
+													<span><i class="fas fa-star"></i></span>
+												</p>
+											</div>
+											<div class="col-md-4">
+												<strong>Teamwork</strong>
+												<p class="text-success">
+													<span><i class="fas fa-star"></i></span>
+													<span><i class="fas fa-star"></i></span>
+													<span><i class="fas fa-star"></i></span>
+													<span><i class="fas fa-star"></i></span>
 												</p>
 											</div>
 										</div>
 										
 										<h3 class="mb-3"><strong>Languagues Known</strong></h3>
 										<div class="row">
-											<div class="col-md-6">
-												<strong>English</strong>
-												<p class="mb-0 text-warning">
-													<span class="p-1">
-														<i class="fas fa-star"></i>
-													</span>
-													<span class="p-1">
-														<i class="fas fa-star"></i>
-													</span>
-													<span class="p-1">
-														<i class="fas fa-star"></i>
-													</span>
-													<span class="p-1">
-														<i class="fas fa-star-half-alt"></i>
-													</span>
-												</p>
-											</div>
-											<div class="col-md-6">
+											<div class="col-md-4">
 												<strong>Tamil</strong>
 												<p class="mb-0 text-warning">
-													<span class="p-1">
-														<i class="fas fa-star"></i>
-													</span>
-													<span class="p-1">
-														<i class="fas fa-star"></i>
-													</span>
-													<span class="p-1">
-														<i class="fas fa-star"></i>
-													</span>
-													<span class="p-1">
-														<i class="fas fa-star"></i>
-													</span>
+													<span><i class="fas fa-star"></i></span>
+													<span><i class="fas fa-star"></i></span>
+													<span><i class="fas fa-star"></i></span>
+													<span><i class="fas fa-star"></i></span>	
+												</p>
+											</div>
+											<div class="col-md-4">
+												<strong>Telugu</strong>
+												<p class="mb-0 text-warning">
+													<span><i class="fas fa-star"></i></span>
+													<span><i class="fas fa-star"></i></span>
+													<span><i class="fas fa-star"></i></span>
+												</p>
+											</div>
+											<div class="col-md-4">
+												<strong>English</strong>
+												<p class="mb-0 text-warning">
+													<span><i class="fas fa-star"></i></span>
+													<span><i class="fas fa-star"></i></span>
+													<span><i class="fas fa-star"></i></span>
+													<span><i class="fas fa-star-half-alt"></i></span>
 												</p>
 											</div>
 										</div>
