--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
 							<div class="services color-4">
 								<h3 class="text-success">Knowledge Sharing <span class="ml-2"><i class="fas fa-chalkboard-teacher"></i></span></h3>
 								<p class="mb-0">
-									I believe when I teach one, two will learn. Knowledge sharing is my key USP.
-									Sharing the knowledge across your peers not only enlight them it also gives confidence over that topic.
+									I believe when you teach one, two will learn. Knowledge sharing is my key USP.
+									Sharing the knowledge across the peers will not only enlight them it also gives you confidence over that topic.
 								</p>
 							</div>
 						</div>
