Updated javascript certification

--- a/index.html
+++ b/index.html
@@ -486,7 +486,9 @@
 							<span class="heading-meta">Certifications</span>
 							<div class="services color-1">
 								<p>
-									<span class="text-primary p-1"><i class="fas fa-graduation-cap fa-2x"></i></span><strong>Javascript Basic</strong> Certification in hackerrank
+									<span class="text-primary p-1"><i class="fas fa-graduation-cap fa-2x"></i></span>
+									<a target="_blank" href='https://www.hackerrank.com/certificates/54af0fa87316'><strong>Javascript Intermediate</strong></a> 
+									Certification in <i title="HackerRank" class="fab fa-hackerrank fa-2x" aria-hidden="true"></i>
 								</p>
 							</div>
 						</div>
