Renamed MongoDB certification name

--- a/index.html
+++ b/index.html
@@ -523,12 +523,11 @@
 										<a target="_blank" title="Javascript Intermediate" href='https://www.hackerrank.com/certificates/54af0fa87316'>
 											<i class="fa fa-external-link" aria-hidden="true"></i>
 										</a> 
-										
 										Certification in <strong>HackerRank</strong>
 									</p>
 									<p>
 										<span class="text-primary p-1"><i class="fas fa-graduation-cap fa-2x"></i></span>
-										<strong>M001 MongoDB Basics</strong>
+										<strong>MongoDB Basics</strong>
 										<a target="_blank" title="M001 MongoDB Basics" href='https://university.mongodb.com/course_completion/61807c50-bbda-4d07-b741-92bec0066cd3?utm_source=copy&utm_medium=social&utm_campaign=university_social_sharing'>
 											<i class="fa fa-external-link" aria-hidden="true"></i>
 										</a>
