Modified skill name

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 												<span title="Sass"  class="p-1"><i class="devicon-sass-original colored fa-2x"></i></span>
 												<span title="Bootstrap"  class="p-1"><i class="devicon-bootstrap-plain colored fa-2x"></i></span>
 												<span title="jQuery"  class="p-1"><i class="devicon-jquery-plain colored fa-2x"></i></span>
-												<span title="AngularJS"  class="p-1"><i class="devicon-angularjs-plain colored fa-2x"></i></span>
+												<span title="Angular"  class="p-1"><i class="devicon-angularjs-plain colored fa-2x"></i></span>
 												<span title="Grunt" class="p-1"><i class="devicon-grunt-line colored fa-2x"></i></span>
 											</div>
 											<div class="row">
