--- a/index.html
+++ b/index.html
@@ -343,6 +343,15 @@
 											<h3 class="mb-3"><strong>Languagues Known</strong></h3>
 											<div class="row">
 												<div class="col-md-4">
+													<strong>English</strong>
+													<p class="mb-0 text-warning">
+														<span><i class="fas fa-star"></i></span>
+														<span><i class="fas fa-star"></i></span>
+														<span><i class="fas fa-star"></i></span>
+														<span><i class="fas fa-star-half-alt"></i></span>
+													</p>
+												</div>
+												<div class="col-md-4">
 													<strong>Tamil</strong>
 													<p class="mb-0 text-warning">
 														<span><i class="fas fa-star"></i></span>
@@ -357,15 +366,6 @@
 														<span><i class="fas fa-star"></i></span>
 														<span><i class="fas fa-star"></i></span>
 														<span><i class="fas fa-star"></i></span>
-													</p>
-												</div>
-												<div class="col-md-4">
-													<strong>English</strong>
-													<p class="mb-0 text-warning">
-														<span><i class="fas fa-star"></i></span>
-														<span><i class="fas fa-star"></i></span>
-														<span><i class="fas fa-star"></i></span>
-														<span><i class="fas fa-star-half-alt"></i></span>
 													</p>
 												</div>
 											</div>
@@ -395,7 +395,10 @@
 												</div>
 
 												<div class="timeline-label">
-													<h2><a href="#">Techsamrat Info Technologies</a> <span>Dec 2014 - Jan 2016</span></h2>
+													<h2>
+														<a href="#">Techsamrat Info Technologies</a> 
+														<span class="ml-4">Dec 2014 - Jan 2016</span>
+													</h2>
 													<div class="mb-2">
 														<span class="pr-4"><strong>Role : </strong>Junior Software Engineer</span>
 														<strong>Project : </strong><span>CoderTest</span> 
@@ -416,7 +419,12 @@
 												</div>
 
 												<div class="timeline-label">
-													<h2><a href="#">Ramco Systems</a> <span>Jan 2016 - Jun 2017</span></h2>
+													<h2>
+														<a target="_blank" href="https://www.ramco.com/">
+															<img title="Ramco Systems" width="20%" height="20%" class="img-fluid" src="public/images/Ramco_Logo.png"> 
+														</a> 
+														<span class="ml-4">Jan 2016 - Jun 2017</span>
+													</h2>
 													<div class="mb-2">
 														<span class="pr-4"><strong>Role : </strong>Programmer Analyst</span>
 														<strong>Project : </strong><span>OBCS</span> 
@@ -436,7 +444,12 @@
 										</div>
 
 										<div class="timeline-label">
-												<h2><a href="#">ADP India Pvt Ltd</a> <span>Jun 2017 - Dec 2019</span></h2>
+												<h2>
+													<a target="_blank" href="https://www.adp.com/">
+														<img title="ADP India Pvt Ltd" width="12%" height="8%" class="img-fluid" src="public/images/ADP_Logo.png">
+													</a> 
+													<span class="ml-4">Jun 2017 - Dec 2019</span>
+												</h2>
 												<div class="mb-2">
 													<span class="pr-4"><strong>Role : </strong>Application Developer</span>
 													<strong>Project : </strong><span>iHCM (EMEA)</span> 
@@ -458,7 +471,12 @@
 											</div>
 
 											<div class="timeline-label">
-												<h2><a href="#">Mindtree</a> <span>Jan 2020 - Present</span></h2>
+												<h2>
+													<a target="_blank" href="https://www.mindtree.com/">
+														<img title="Mindtree Pvt Ltd" width="20%" height="20%" class="img-fluid" src="public/images/Mindtree_Logo.png">
+													</a> 
+													<span>Jan 2020 - Present</span>
+												</h2>
 												<div class="mb-2">
 													<span class="pr-4"><strong>Role : </strong>Module Lead</span>
 													<strong>Project : </strong><span>TRG</span> 
