Updated resume download file name

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 					<span class="position">
 						<h6 class="title">
 							<span></span>
-							<a href="public/pdf/Sivakumar-Resume-v1.pdf" target="_blank" download="Resume">
+							<a href="public/pdf/Sivakumar-Resume-v1.pdf" target="_blank" download="Sivakumar's Resume">
 								<strong class="p-1 text-dark">Resume</strong> <i class="fas fa-download"></i>
 							</a>
 							<span></span>
@@ -104,7 +104,9 @@
 							</div>
 						</div>
 						<div class="p-4 text-center animate-box" data-animate-effect="fadeInTop">
-							<a href="public/pdf/Sivakumar-Resume-v1.pdf" title="Download Resume" target="_blank" download="Resume" class="btn btn-primary download">Resume <span><i class="fas fa-cloud-download-alt"></i></span></a>
+							<a href="public/pdf/Sivakumar-Resume-v1.pdf" title="Download Resume" target="_blank" download="Sivakumar's Resume" class="btn btn-primary download">
+								Resume <span><i class="fas fa-cloud-download-alt"></i></span>
+							</a>
 						</div>
 					</div>
 				</section>
@@ -642,7 +644,7 @@
 							</div>
 						</div>
 						<div class="p-4 text-center  animate-box" data-animate-effect="fadeInTop">
-							<a href="public/pdf/Sivakumar-Resume-v1.pdf" target="_blank" download="Resume" class="btn btn-primary download">
+							<a href="public/pdf/Sivakumar-Resume-v1.pdf" target="_blank" download="Sivakumar's Resume" class="btn btn-primary download">
 								Resume <span><i class="fas fa-cloud-download-alt"></i></span>
 							</a>
 						</div>
