Updated project details

--- a/index.html
+++ b/index.html
@@ -481,11 +481,11 @@
 												</h2>
 												<div class="mb-2">
 													<span class="pr-4"><strong>Role : </strong>Module Lead</span>
-													<strong>Project : </strong><span>TRG</span> 
+													<strong>Project : </strong><span>TRG CORE</span> 
 												</div>
 												<p>
 													TRG is a subsidiary of Realogy Group which is a real estate company in USA.
-													Working on core Javascript and been part of TDD.
+													In TRG CORE project, I have worked on WebAPI, WCF and Dust JS.
 												</p>
 										</div>
 										</div>
