Modified experience years

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 									
 									<h2>Sivakumar G.R.</h2>
 									<h4 class="mb-2">Full Stack Developer</h4>
-									<strong>7+ years of experience</strong>
+									<strong>7.3 years of experience</strong>
 									
 									<ul class="animate-box" data-animate-effect="fadeInRight">
 										<li><i class="fas fa-envelope"></i><a class="p-2" href="mailto:">siva.anaz@gmail.com</a></li>
